solved white space issue

--- a/theBigDot.css
+++ b/theBigDot.css
@@ -42,11 +42,12 @@ body {
 }
 
 .overall-container {
-    width: 100vw;
-    height: 100vh;
-    max-width: 100%;
-    max-height: 100%;
-    padding-bottom: 30px;
+    /* for some reason i dont know, positioning this relatively prevents the white space at the bottom when the screen is dimmed (when choose color btn is clicked) */
+    position: relative; 
+    min-width: 100vw;
+    min-height: 100vh;
+    width: 100%;
+    height: auto;
     transition: linear 0.6s;
     -webkit-transition: linear 0.6s;
     -moz-transition: linear 0.6s;
@@ -346,8 +347,8 @@ body {
 
 .dim {
     position: absolute;
-    /* width: 500%;
-    height: 500%; */
+    /* width: 500%;*/
+    height: auto; 
     top: 0;
     right: 0;
     bottom: 0;
